feed_grip e feed_vision funzionante

--- a/test_cpp/CMakeLists.txt
+++ b/test_cpp/CMakeLists.txt
@@ -151,6 +151,7 @@ add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catk
 target_link_libraries(${PROJECT_NAME}_node
   ${catkin_LIBRARIES}
   ${cEigen_LIBRARIES}
+  #${CMAKE_CURRENT_SOURCE_DIR}/include/obj.o
 )
 
 #############
